--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "rulesFile": "database.rules.json",
   "hosting": {
-    "public": "build",
+    "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
