--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "4.0.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "use-places-autocomplete": "^1.6.0",
+    "use-position": "^0.0.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
